<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/help_main"
    android:clickable="true"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/help_background_one"

        android:id="@+id/layout_help_congrat"

       >

        <RelativeLayout
            android:layout_width="@dimen/help_width"
            android:layout_height="@dimen/help_height"
            android:background="@drawable/help_one"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/congrat">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_congrat"
            android:layout_centerVertical="false"
            android:id="@+id/congratHeader"
            android:layout_marginLeft="@dimen/help_text_margin_left"
            android:layout_marginTop="@dimen/help_text_margin_top"
            android:textSize="18sp"

            android:textColor="@color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_congrat_text"
            android:layout_centerVertical="false"
            android:id="@+id/congratText"
            android:layout_below="@+id/congratHeader"
            android:layout_marginLeft="@dimen/help_text_margin_left"
            android:layout_marginTop="@dimen/help_text_margin_top"

            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_congrat_next"
            android:id="@+id/helpCongratNext"
            android:layout_marginRight="@dimen/help_next_margin_right"
            android:layout_marginTop="@dimen/help_next_margin_top"
            android:textSize="14sp"
            android:textColor="@color/red_light"
            android:layout_below="@+id/congratText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        </RelativeLayout>
        </RelativeLayout>

</RelativeLayout>