<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:clickable="true"
    android:background="@drawable/help_background_one">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="@dimen/help_8_margin_top">
    <RelativeLayout
        android:id="@+id/helpLocation"
        android:layout_width="@dimen/help_width"
        android:layout_height="@dimen/help_8_height"

        android:layout_centerVertical="true"

        android:background="@drawable/help_eight"
        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_location"
            android:layout_centerVertical="false"
            android:id="@+id/helpLocationTitle"
            android:layout_marginLeft="@dimen/help_text_margin_left"
            android:layout_marginTop="@dimen/help_text_margin_top"
            android:textSize="18sp"

            android:textColor="@color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_location_text"
            android:layout_centerVertical="false"
            android:id="@+id/helpLocationText"
            android:layout_below="@+id/helpLocationTitle"
            android:layout_marginLeft="@dimen/help_text_margin_left"
            android:layout_marginTop="@dimen/help_text_margin_top"

            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_congrat_next"
            android:id="@+id/helpLocationNext"
            android:layout_marginRight="@dimen/help_next_margin_right"
            android:layout_marginTop="@dimen/help_next_margin_top"
            android:textSize="14sp"
            android:textColor="@color/red_light"
            android:layout_below="@+id/helpLocationText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</RelativeLayout>
</RelativeLayout>