<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:clickable="true"
    android:background="@drawable/help_background_two"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/help_margin_panel_top"

        android:id="@+id/setstime">

        <RelativeLayout
            android:layout_width="@dimen/help_width"
            android:layout_height="@dimen/help_2_height"
            android:background="@drawable/help_two"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/settime">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_set_time"
            android:layout_centerVertical="false"
            android:id="@+id/helpSetTimeTitle"
            android:layout_marginLeft="@dimen/help_text_margin_left"
            android:layout_marginTop="@dimen/help_text_margin_top"
            android:textSize="18sp"

            android:textColor="@color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_set_time_text"
            android:layout_centerVertical="false"
            android:id="@+id/helpSetTimeText"
            android:layout_below="@+id/helpSetTimeTitle"
            android:layout_marginLeft="@dimen/help_text_margin_left"
            android:layout_marginTop="@dimen/help_text_margin_top"

            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_congrat_next"
            android:id="@+id/helpSetTimeNext"
            android:layout_marginRight="@dimen/help_next_margin_right"
            android:layout_marginTop="@dimen/help_next_margin_top"
            android:textSize="14sp"
            android:textColor="@color/red_light"
            android:layout_below="@+id/helpSetTimeText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>